k8s-resources/rockergaming-client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rockergaming-client
  namespace: rockergaming
spec:
  selector:
    app: rockergaming-client
  ports:
  - name: http
    targetPort: 80
    port: 80
