k8s-resources/rockergaming-client/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rockergaming-client
  namespace: rockergaming
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.dev.lab.rockergaming.com`)
      kind: Rule
      services:
        - name: rockergaming-client
          port: 80
          namespace: rockergaming
    - match: Host(`dev.lab.rockergaming.com`)
      kind: Rule
      services:
        - name: rockergaming-client
          port: 80
          namespace: rockergaming
  tls:
    secretName: lab-rockergaming-com-tls
